# xxhash-rust-test

./: Cargo.toml
benches/: bench.rs
src/: main.rs  quickcheck.rs
